# demotivator_tg_bot

./: .gitignore  CMakeLists.txt  main.cpp
Headers/: BotHandler.h  Calculate_prefix_expression.h  infix_to_prefix_cast.h
Headers/Commands/: calculate_prefix_exp.h  demotivators.h  start.h
